# phonics-master-pro

./: .env.example  .gitignore  .okx_config  1  6month_backtest_MARCH2026_fresh.json  6month_backtest_MARCH2026_fresh.md  6month_backtest_comparison_report.md  ACA_BUILD_SUMMARY.md  ACA_CHECKLIST.md  ACA_FULL_PHONICS.md  ACA_PLAN.md  ACA_PLAN_FULL_AUTO_TRADING.md  ADAPTIVE_EDGE_README.md  ADAPTIVE_RESULTS_REPORT.md  AGENCY_SYSTEM_ACTIVATED.md  APK_CREATION_RESEARCH.md  APP_IMPLEMENTATION_GUIDE.md  BACKTEST_REPORT_v23.md  BRIDGE_README.md  BUG_FIX_TRADING_EXECUTION.md  BUILD_LOCAL.md  BUILD_TRIGGER.txt  CEL_DEMO.py  CODE_AUDIT_REPORT.md  COGNITIVE_ENHANCEMENT_COMPLETE.md  COMPLETE_PHONICS_CURRICULUM.md  DESKMATE_SETUP.md  FIVERR_GIG_TEMPLATES.md  FIXES_APPLIED.md  FULL_AUTO_IMPLEMENTATION_COMPLETE.md  GITHUB_ACTIONS.md  HEARTBEAT.md  HELIUS_SETUP.md  IDENTITY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  LUXTRADER_FULL_AUTO_READINESS_REPORT.md  LuxBridge.lua  MEMORY.md  NEXT_STEPS_COMPLETE.md  (+307 more)
agents/: README.md  aloe_reflection_agent.py  income_tracker.py  product_template.py
android/: .gitignore  (+3 more)
glb_transparent_viewer/: CMakeLists.txt  PROJECT_SUMMARY.md  README.md  WINDOWS_BUILD.md  build.bat  build_and_run.bat  build_here.bat  build_now.bat  build_release.bat  check_vs.bat  quickbuild.bat  run_test.bat  run_with_fox.bat  setup_deps.bat  setup_vs_project.bat
glb_transparent_viewer/include/: GLBLoader.h  Input.h  Renderer.h  Skeleton.h  Window.h
glb_transparent_viewer/src/: GLBLoader.cpp  Input.cpp  Renderer.cpp  Skeleton.cpp  Window.cpp  main.cpp
(+1318 files in other folders)
